--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
   <body>
     <div class="header">
-      <h1>Miss Cocktail</h1>
+      <h1><%= link_to "Miss Cocktail", cocktails_path %></h1>
     </div>
     <%= yield %>
   </body>
