--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,19 +1,28 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1551024709-8f23befc6f87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80)">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.7)), url(https://images.unsplash.com/photo-1551024709-8f23befc6f87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80)">
   <h1>All our good cocktails</h1>
   <br>
-  <p>Find the perfect cocktail</p>
+  <p>
+    <span id="banner-typed-text"></span>
+  </p>
 </div>
 
 <br>
-
-<% @cocktails.each do |cocktail| %>
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)))"><p><%= link_to cocktail.name, cocktail_path(cocktail.id) %></p></div>
-<% end %>
-
-
+<div class="container">
+  <div class="row">
+    <% @cocktails.each do |cocktail| %>
+      <div class="col-lg-4 col-md-4 col-12 card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 1000, width: 1000, crop: :fill %>')"><p><%= link_to cocktail.name, cocktail_path(cocktail.id) %></p></div>
+    <% end %>
+  </div>
+</div>
+<br>
 <h2>Create a new Cocktail</h2>
-
+<div class="form-group">
   <%= simple_form_for (@cocktail) do |f| %>
     <%= f.input :name %>
-    <%= f.submit "Save this cocktail" %>
+    <%= f.input :photo, as: :file %>
+    <%= f.submit "Save this cocktail"%>
   <% end %>
+</div>
+<!--
+<%= cl_image_tag("bbcgpavganppytpbiij5",
+      width: 400, height: 300, crop: :fill) %> -->
