--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @cocktail.name %></h1>
-
+<%= cl_image_tag @cocktail.photo.key, height: 500, width: 400, crop: :fill %>
 <h2>Recipe</h2>
 <ul><% @cocktail.doses.each do |dose| %>
   <li><%= dose.ingredient.name %> -
