--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,17 +13,12 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  p {
+  margin-bottom: 3px;
+  border: 1px;
+  a {
     font-family: 'Raleway Dots', cursive;
     text-decoration: none;
     color: white;
     font-size: 24px;
   }
-}
-
-.card-category a {
-    font-family: 'Raleway Dots', cursive;
-    text-decoration: none;
-    color: white;
-    font-size: 24px;
 }
