--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,4 +1,5 @@
 // Define variables for your color scheme
+@import url('https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap');
 
 // For example:
 $red: #FD1015;
