--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -9,12 +9,16 @@
 <br>
 <div class="container">
   <div class="row">
-    <% @cocktails.each do |cocktail| %>
-      <div class="col-lg-4 col-md-4 col-12 card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 1000, width: 1000, crop: :fill %>')"><p><%= link_to cocktail.name, cocktail_path(cocktail.id) %></p></div>
+      <% @cocktails.each do |cocktail| %>
+        <div class="col-lg-4 col-md-4 col-12 card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 1000, width: 1000, crop: :fill %>')"><p><%= link_to cocktail.name, cocktail_path(cocktail.id) %></p></div>
     <% end %>
   </div>
 </div>
+
 <br>
+<hr>
+
+<div class="container new-cocktail">
 <h2>Create a new Cocktail</h2>
 <div class="form-group">
   <%= simple_form_for (@cocktail) do |f| %>
@@ -22,4 +26,5 @@
     <%= f.input :photo, as: :file %>
     <%= f.submit "Save this cocktail"%>
   <% end %>
+</div>
 </div>
